--- a/index.html
+++ b/index.html
@@ -1,47 +1,36 @@
 [
 {
-"pic":"lib/images/p185.png",
-"ty0":"lib/images/mrock.png",
-"ty1":"",
-"ncp":"CP 1162 - 1227",
+"pic":"lib/images/p40.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 1034 - 1101",
 "w0":"lib/images/wclsu.png",
-"w1":"",
-"hcp":"CP 1452 - 1534",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Normal.png","b2":"lib/images/Poison.png","b3":"lib/images/Flying.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Ground.png","g3":"lib/images/Fighting.png","g4":"lib/images/Water.png","g5":"lib/images/Grass.png","g6":"","g7":"","g8":"","g9":"","n":"樹才怪","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p448.png","bu22":"路卡利歐","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"332","bu31":"lib/images/p448.png","bu32":"路卡利歐","bu33":"lib/images/Steel.png","bu34":"子彈拳","bu35":"lib/images/Fighting.png","bu36":"332"
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1293 - 1376",
+"sh":"",
+"b1":"lib/images/Bug.png","b2":"lib/images/Dark.png","b3":"lib/images/Ghost.png","b4":"lib/images/Dragon.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Poison.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"胖可丁","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Poison.png","bu14":"毒擊","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p483.png","bu22":"帝牙盧卡","bu23":"lib/images/Steel.png","bu24":"金屬爪","bu25":"lib/images/Steel.png","bu26":"鐵頭","bu31":"lib/images/p407.png","bu32":"羅絲雷朵","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Poison.png","bu36":"污泥炸彈"
 },
 {
-"pic":"lib/images/p200.png",
-"ty0":"lib/images/mghost.png",
-"ty1":"",
-"ncp":"CP 1039 - 1100",
-"w0":"lib/images/wfoggy.png",
-"w1":"",
-"hcp":"CP 1298 - 1376",
+"pic":"lib/images/p103.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mdragon.png",
+"ncp":"CP 1643 - 1722",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 2055 - 2153",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Bug.png","b2":"lib/images/Poison.png","b3":"lib/images/Fighting.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ghost.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"夢妖","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p215.png",
-"ty0":"lib/images/mdark.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1107 - 1172",
-"w0":"lib/images/wfoggy.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1384 - 1465",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p448.png","bu12":"路卡利歐","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"332","bu21":"lib/images/p534.png","bu22":"修建老匠","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p286.png","bu32":"斗笠菇","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
-},
-{
-"pic":"lib/images/p302.png",
-"ty0":"lib/images/mdark.png",
-"ty1":"lib/images/mghost.png",
-"ncp":"CP 789 - 843",
-"w0":"lib/images/wfoggy.png",
-"w1":"",
-"hcp":"CP 986 - 1054",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Fighting.png","b2":"lib/images/Poison.png","b3":"lib/images/Psychic.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾魂眼","bu11":"lib/images/p282.png","bu12":"沙奈朵","bu13":"lib/images/Fairy.png","bu14":"撒嬌","bu15":"lib/images/Fairy.png","bu16":"魔法閃耀","bu21":"lib/images/p468.png","bu22":"波克基斯","bu23":"lib/images/Fairy.png","bu24":"撒嬌","bu25":"lib/images/Fairy.png","bu26":"魔法閃耀","bu31":"lib/images/p210.png","bu32":"布魯皇","bu33":"lib/images/Fairy.png","bu34":"撒嬌","bu35":"lib/images/Fairy.png","bu36":"嬉鬧"
+"pic":"lib/images/p281.png",
+"ty0":"lib/images/mpsychic.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 508 - 552",
+"w0":"lib/images/wwindy.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 635 - 690",
+"sh":"",
+"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
 "pic":"lib/images/p303.png",
@@ -52,6 +41,17 @@
 "w1":"lib/images/wcloudy.png",
 "hcp":"CP 1096 - 1167",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p555.png","bu32":"達摩狒狒(Standard)","bu33":"lib/images/Fire.png","bu34":"火焰牙","bu35":"lib/images/Fire.png","bu36":"過熱"
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p244.png","bu12":"炎帝","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p244.png","bu22":"炎帝","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p244.png","bu32":"炎帝","bu33":"lib/images/Fire.png","bu34":"火焰牙","bu35":"lib/images/Fire.png","bu36":"大字爆炎"
+},
+{
+"pic":"lib/images/p347.png",
+"ty0":"lib/images/mrock.png",
+"ty1":"lib/images/mbug.png",
+"ncp":"CP 817 - 874",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wrain.png",
+"hcp":"CP 1022 - 1092",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Poison.png","b2":"lib/images/Normal.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Water.png","g2":"lib/images/Rock.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"太古羽蟲","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p382.png","bu32":"蓋歐卡","bu33":"lib/images/Water.png","bu34":"攀瀑","bu35":"lib/images/Water.png","bu36":"水炮"
 }
 ]
