--- a/index.html
+++ b/index.html
@@ -1,57 +1,68 @@
 [
 {
-"pic":"lib/images/p40.png",
-"ty0":"lib/images/mnormal.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 1034 - 1101",
-"w0":"lib/images/wclsu.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 1293 - 1376",
+"pic":"lib/images/p89.png",
+"ty0":"lib/images/mpoison.png",
+"ty1":"",
+"ncp":"CP 1501 - 1575",
+"w0":"lib/images/wcloudy.png",
+"w1":"",
+"hcp":"CP 1876 - 1969",
 "sh":"",
-"b1":"lib/images/Bug.png","b2":"lib/images/Dark.png","b3":"lib/images/Ghost.png","b4":"lib/images/Dragon.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Poison.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"胖可丁","bu11":"lib/images/p386a.png","bu12":"代歐奇希斯","bu13":"lib/images/Poison.png","bu14":"毒擊","bu15":"lib/images/Electric.png","bu16":"電磁炮","bu21":"lib/images/p483.png","bu22":"帝牙盧卡","bu23":"lib/images/Steel.png","bu24":"金屬爪","bu25":"lib/images/Steel.png","bu26":"鐵頭","bu31":"lib/images/p407.png","bu32":"羅絲雷朵","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Poison.png","bu36":"污泥炸彈"
+"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Fairy.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Psychic.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"臭臭泥","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p150.png","bu22":"超夢","bu23":"lib/images/Psychic.png","bu24":"精神利刃","bu25":"lib/images/Psychic.png","bu26":"精神擊破","bu31":"lib/images/p150.png","bu32":"超夢","bu33":"lib/images/Psychic.png","bu34":"念力","bu35":"lib/images/Psychic.png","bu36":"精神強念"
 },
 {
-"pic":"lib/images/p103al.png",
+"pic":"lib/images/p91.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"lib/images/mice.png",
+"ncp":"CP 1383 - 1455",
+"w0":"lib/images/wrain.png",
+"w1":"lib/images/wsnow.png",
+"hcp":"CP 1729 - 1819",
+"sh":"",
+"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"刺甲貝","bu11":"lib/images/p448.png","bu12":"路卡利歐","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"Aura Sphere","bu21":"lib/images/p644.png","bu22":"捷克羅姆","bu23":"lib/images/Electric.png","bu24":"充電光束","bu25":"lib/images/Electric.png","bu26":"瘋狂伏特","bu31":"lib/images/p409.png","bu32":"戰槌龍","bu33":"lib/images/Rock.png","bu34":"擊落","bu35":"lib/images/Rock.png","bu36":"岩崩"
+},
+{
+"pic":"lib/images/p103.png",
 "ty0":"lib/images/mgrass.png",
-"ty1":"lib/images/mdragon.png",
+"ty1":"lib/images/mpsychic.png",
 "ncp":"CP 1643 - 1722",
 "w0":"lib/images/wsun.png",
 "w1":"lib/images/wwindy.png",
 "hcp":"CP 2055 - 2153",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
-},
-{
-"pic":"lib/images/p281.png",
-"ty0":"lib/images/mpsychic.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 508 - 552",
-"w0":"lib/images/wwindy.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 635 - 690",
 "sh":"",
-"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
+"b1":"lib/images/Fighting.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"lib/images/Psychic.png","b6":"lib/images/Ground.png","b7":"","b8":"","b9":"","g1":"lib/images/Bug.png","g2":"lib/images/Fire.png","g3":"lib/images/Ice.png","g4":"lib/images/Flying.png","g5":"lib/images/Poison.png","g6":"lib/images/Dark.png","g7":"lib/images/Ghost.png","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p637.png","bu12":"火神蛾","bu13":"lib/images/Bug.png","bu14":"蟲咬","bu15":"lib/images/Bug.png","bu16":"蟲鳴","bu21":"lib/images/p649.png","bu22":"蓋諾賽克特(Shock)","bu23":"lib/images/Bug.png","bu24":"連斬","bu25":"lib/images/Bug.png","bu26":"十字剪","bu31":"lib/images/p649.png","bu32":"蓋諾賽克特(Douse)","bu33":"lib/images/Bug.png","bu34":"連斬","bu35":"lib/images/Bug.png","bu36":"十字剪"
 },
 {
-"pic":"lib/images/p303.png",
-"ty0":"lib/images/msteel.png",
-"ty1":"lib/images/mfairy.png",
-"ncp":"CP 877 - 934",
-"w0":"lib/images/wsnow.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 1096 - 1167",
-"sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p244.png","bu12":"炎帝","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p244.png","bu22":"炎帝","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p244.png","bu32":"炎帝","bu33":"lib/images/Fire.png","bu34":"火焰牙","bu35":"lib/images/Fire.png","bu36":"大字爆炎"
-},
-{
-"pic":"lib/images/p347.png",
-"ty0":"lib/images/mrock.png",
-"ty1":"lib/images/mbug.png",
-"ncp":"CP 817 - 874",
+"pic":"lib/images/p108.png",
+"ty0":"lib/images/mnormal.png",
+"ty1":"",
+"ncp":"CP 752 - 806",
 "w0":"lib/images/wclsu.png",
-"w1":"lib/images/wrain.png",
-"hcp":"CP 1022 - 1092",
+"w1":"",
+"hcp":"CP 940 - 1008",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Poison.png","b2":"lib/images/Normal.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Water.png","g2":"lib/images/Rock.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"太古羽蟲","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p382.png","bu32":"蓋歐卡","bu33":"lib/images/Water.png","bu34":"攀瀑","bu35":"lib/images/Water.png","bu36":"水炮"
+"b1":"lib/images/Ghost.png","b2":"","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大舌頭","bu11":"lib/images/p448.png","bu12":"路卡利歐","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"Aura Sphere","bu21":"lib/images/p534.png","bu22":"修建老匠","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p286.png","bu32":"斗笠菇","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+},
+{
+"pic":"lib/images/p125.png",
+"ty0":"lib/images/melectric.png",
+"ty1":"",
+"ncp":"CP 1265 - 1333",
+"w0":"lib/images/wrain.png",
+"w1":"",
+"hcp":"CP 1582 - 1667",
+"sh":"",
+"b1":"lib/images/Steel.png","b2":"lib/images/Electric.png","b3":"lib/images/Flying.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"電擊獸","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p530.png","bu22":"龍頭地鼠","bu23":"lib/images/Ground.png","bu24":"擲泥","bu25":"lib/images/Ground.png","bu26":"地震","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
+},
+{
+"pic":"lib/images/p126.png",
+"ty0":"lib/images/mfire.png",
+"ty1":"",
+"ncp":"CP 1298 - 1367",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 1623 - 1710",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ice.png","b2":"lib/images/Fire.png","b3":"lib/images/Grass.png","b4":"lib/images/Steel.png","b5":"lib/images/Bug.png","b6":"lib/images/Fairy.png","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Rock.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鴨嘴火獸","bu11":"lib/images/p409.png","bu12":"戰槌龍","bu13":"lib/images/Rock.png","bu14":"擊落","bu15":"lib/images/Rock.png","bu16":"岩崩","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p645.png","bu32":"土地雲","bu33":"lib/images/Rock.png","bu34":"落石","bu35":"lib/images/Ground.png","bu36":"大地之力"
 }
 ]
